2010-09-14: CSSlayer <wengxt@gmail.com>
    * 修复一个设置输入法切换快捷键的问题（笔误……）
	* 修复子菜单在左侧时的问题
	* readPYMB, readPYBase, mb2org可以工作，注意用-h查看参数选项

2010-09-09: CSSlayer <wengxt@gmail.com>
    * 修复读取老版本profile时的崩溃错误。issue 291

2010-09-08: CSSlayer <wengxt@gmail.com>
    * 修复非UTF-8 Locale的问题
	* 主窗口设置名称
	* 放松环境变量检查（大小写）
	* 更新deb包build信息

2010-09-07: CSSlayer <wengxt@gmail.com>
    * 增加利用fcitx-remote进行重新加载配置的选项
	* 调整线程间同步，避免问题。
	* 避免僵尸进程
	* 菜单样式集成进皮肤
	* 菜单配置选项和退出选项正常工作，关闭菜单把鼠标移出即可
	* fcitx-config脚本移入fcitx当中，用于探测已安装的配置工具
	* 否则调用系统的默认编辑器打开配置文件，因此与fcitx-config-0.1.1有一个文件冲突

2010-09-06: CSSlayer <wengxt@gmail.com>
    * 调整libfcitx-config，方便GUI开发
	* 调整dark的一些字体颜色，感谢jason52lh
	* 大量更新翻译信息
	* 4.0beta1

2010-09-02: CSSlayer <wengxt@gmail.com>
	* 调整libfcitx-config的函数

2010-09-01: CSSlayer <wengxt@gmail.com>
    * 修复一些托盘程序背景颜色问题。（如trayer，但并未解决用im-switch启动的托盘背景为黑色的问题）

2010-08-31: CSSlayer <wengxt@gmail.com>
    * 修复输入框的箭头不显示的问题
	* 将字体设置移回配置文件中，而不是和皮肤一起设置
	* dark皮肤小更新
	* 修复一个拼写错误
	* 更新部分翻译
	* 修复不存在~/.config文件夹时的崩溃错误
	* 修复一个笔误带来的模糊音无效问题
	* 增加生成码表时的判断条件，防止生成无效的码表
	* 修复字体问题
	* 皮肤的颜色配置修改为原来的各个设置
	* 增加Ukoyi的新皮肤为Default，原default作为classic

2010-08-18: CSSlayer <wengxt@gmail.com>
    * 消除内存泄漏
	* 修复CTRL_5重新加载配置时会崩溃的问题
	* 修改微软双拼的一些配置，同时对于双拼方案令v可以被配置（如果影响了其他双拼请汇报Bug）
	* 对某些配置采取CTRL_5读取时不加载，保证稳定性（目前包含DBus和托盘）
	* 修复DBus模式会崩溃的问题
	* 修复各种码表相关Bug - -b

2010-08-16: CSSlayer <wengxt@gmail.com>
    * 为码表增加一个优先级设置，按照优先级大小对码表排序
	* 修复无法记录当前输入法的问题
	* 配置文件和皮肤也迁移到新格式，皮肤目前可以在用户目录下设置~/.config/fcitx/skin
	* 用户的码表调整为配置和用户码表都存储在~/.config/fcitx/table下
	* 皮肤的各个输入法图标文件名可以自行配置，默认为fcitx_skin.conf中的chn图标
	* 如果有对应文件存在那么就可以使用对应文件图标作为显示
	* 无全局配置文件，配置文件在第一次运行时自动生成
	* 目录返回~/.config/fcitx而不是~/.config/fcitx-utf8
	* 终端运行时提示性输出增多

2010-08-15: CSSlayer <wengxt@gmail.com>
    * 增加一个信息提示的窗口，如果环境变量设置有问题的话提示如何设置

2010-08-14: CSSlayer <wengxt@gmail.com>
    * 对配置文件有大量修改，初步加入国际化支持
	* 码表配置文件有所调整，一个配置文件对应一个码表，而不是原先所有码表使用一个配置文件
	* 配置文件内容使用覆盖策略，本地覆盖全局
	* profile和码表已经采用新格式，皮肤和config暂时未变动

2010-07-18: CSSlayer <wengxt@gmail.com>