@@ -1,5 +1,5 @@
 INCLUDES = -I$(top_srcdir)/lib -I$(top_srcdir)/src
-DEFS = -DPKGDATADIR=\"$(pkgdatadir)\"
+DEFS = -DPKGDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(libdir)\"
 
 noinst_LIBRARIES=libimextra.a
 libimextra_a_SOURCES= extra.c extra.h
