@@ -3,9 +3,9 @@
 
 #include <stdlib.h>
 
-#define ISUTF8_CB(c)  (((c)&0xc0) == 0x80)
+#define UTF8_MAX_LENGTH 6
 
-#define UTF8_MAX_LENGTH 4
+#define ISUTF8_CB(c)  (((c)&0xc0) == 0x80)
 
 extern size_t utf8_strlen(const char *s);
 extern char* utf8_get_char(const char *in, int *chr);
