@@ -1,3 +1,7 @@
+2010-09-21: CSSlayer <wengxt@gmail.com>
+    * 修改部分ExtraIM的绑定
+	* 可以和fcitx-sunpinyin 0.1.0工作（待测试）
+
 2010-09-14: CSSlayer <wengxt@gmail.com>
     * 修复一个设置输入法切换快捷键的问题（笔误……）
 	* 修复子菜单在左侧时的问题
